Updated client for benchmarks; Changed the buffer in S3Backend; Updated the CLI for benchmarks;